<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mhodinshamadari.gpslocationfortravellers.PhoneLogin">

    <TextView
        android:background="@color/aqua1"
        android:id="@+id/textView2Phone"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:textColor="#000"
        android:text="@string/provide_phone_no_with_country_code"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/Phonenoedittext"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView2Phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:background="@drawable/edittext_bck"
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:padding="10dp"
        android:text="+91" />

    <Button
        android:id="@+id/PhoneVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Phonenoedittext"
        android:layout_marginTop="49dp"
        android:text="@string/send_otp"
        android:background="@drawable/layout_back"
        android:layout_alignLeft="@+id/Phonenoedittext"
        android:layout_alignStart="@+id/Phonenoedittext"
        android:layout_alignRight="@+id/Phonenoedittext"
        android:layout_alignEnd="@+id/Phonenoedittext" />

    <ImageView
        android:id="@+id/imageView2Phone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/Phonenoedittext"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="7dp"
        android:layout_toLeftOf="@+id/textView2Phone"
        android:layout_toStartOf="@+id/textView2Phone"
        app:srcCompat="@drawable/ic_phone_iphone_black_24dp" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:background="@color/aqua1"
                android:id="@+id/textViewVerified"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="99dp"
                android:textColor="#000"
                android:visibility="gone"
                android:text="@string/provide_otp_in_below_text_area_to_verify"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/OTPeditText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:visibility="gone"
                android:layout_below="@+id/textViewVerified"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="41dp"
                android:ems="10"
                android:padding="10dp"
                android:background="@drawable/edittext_bck"
                android:inputType="phone"
                android:hint="@string/otp_here"/>

            <Button
                android:id="@+id/OTPVERIFY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/OTPeditText"
                android:layout_marginTop="49dp"
                android:text="@string/verify"
                android:visibility="gone"
                android:background="@drawable/layout_back"
                android:layout_alignLeft="@+id/OTPeditText"
                android:layout_alignStart="@+id/OTPeditText"
                android:layout_alignRight="@+id/OTPeditText"
                android:layout_alignEnd="@+id/OTPeditText" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_below="@+id/textViewVerified"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/fui_idp_button_background_phone"
                app:srcCompat="@android:drawable/ic_dialog_map" android:contentDescription="@string/todo" />
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>
